--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "my-portfolio",
   "version": "0.1.0",
-  "homepage": "https://github.com/KrishaNaldo/my-portfolio.git", 
+  "homepage": "https://krishanaldo.github.io/my-portfolio",
   "private": true,
   "dependencies": {
     "@testing-library/dom": "^10.4.1",
